--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.active {
+  border: 1px solid lightgrey;
+  border-radius: 0.2rem;
+}
+
+button > * {
+  pointer-events: none;
+}
