--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,15 @@ code {
 
 * {
   font-family: "Ginger";
+  box-sizing: border-box;
 } 
 
 .active {
-  border: 1px solid rgb(165, 116, 116);
+  box-sizing: border-box;
+  border: 1px solid  lightgrey;
   border-radius: 0.2rem;
   padding: 0;
 }
-
 
 button > * {
   pointer-events: none;
