Addedtransition for background images.

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,14 @@ code {
   padding: 0;
 }
 
+.transparent {
+  opacity: 0;
+}
+
+.visible {
+  opacity: 1;
+}
+
 button > * {
   pointer-events: none;
 }
